--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding:0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
     background-color:#f5e3e0;
@@ -64,7 +65,10 @@ body{
     display:none;
 }
 .player{
+    height: 20vmin;
     display: flex;
-    color: white;
-    
+    justify-content: center;
+    align-items: center;
+    color: #3A3238;
+    font-size: 5vmin;
 }
